--- a/TeslaRent_Client/Pages/TeslaCars/CarDetails.razor
+++ b/TeslaRent_Client/Pages/TeslaCars/CarDetails.razor
@@ -40,20 +40,55 @@ else
                         <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
                             <!-- Indicators -->
                             <div class="carousel-indicators">
-                                <button type="button"
-                                        data-mdb-target="#carouselBasicExample"
-                                        data-mdb-slide-to="0"
-                                        class="active"
-                                        aria-current="true"
-                                        aria-label="Slide 1"></button>
+                                @*245.1 В компонент CarDetails внести изменения кода вывода картинок*@
+                                @{
+                                    int imageIndex = 0;
+                                    int innerImageIndex = 0;
+                                }
+                                @foreach (var image in carBookingVM.OrderDetails.TeslaCarDTO.TeslaCarImages)
+                                {
+                                    if (imageIndex == 0)
+                                    {
+                                        <button type="button"
+                                                data-mdb-target="#carouselBasicExample"
+                                                data-mdb-slide-to="@imageIndex"
+                                                class="active"
+                                                aria-current="true"
+                                                aria-label="Slide 1">
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <button type="button"
+                                                data-mdb-target="#carouselBasicExample"
+                                                data-mdb-slide-to="@imageIndex"
+                                                aria-label="Slide 2">
+                                        </button>
+                                    }
+                                    imageIndex++;
+                                }
                             </div>
 
                             <!-- Inner -->
                             <div class="carousel-inner">
                                 <!-- Single item -->
-                                <div class="carousel-item active h-25">
-                                    <img src="https://images.hdqwalls.com/wallpapers/tesla-model-3-2017-lf.jpg" class="d-block w-100" alt="Sunset Over the City" />
-                                </div>
+                                @*245.2 В компонент CarDetails внести изменения кода вывода картинок*@
+                                @foreach (var image in carBookingVM.OrderDetails.TeslaCarDTO.TeslaCarImages)
+                                {
+                                    if (innerImageIndex == 0)
+                                    {
+                                        <div class="carousel-item active h-25">
+                                            <img src="@image.CarImageUrl" class="d-block w-100" style="border-radius: 20px;" alt="Sunset Over the City" />
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="carousel-item h-25">
+                                            <img src="@image.CarImageUrl" class="d-block w-100" style="border-radius: 20px;" alt="Sunset Over the City" />
+                                        </div>
+                                    }
+                                    innerImageIndex++;
+                                }
 
 
                                 <!-- Inner -->
