--- a/TeslaRent_Server/Pages/_Layout.cshtml
+++ b/TeslaRent_Server/Pages/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />*@
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/mdb.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="TeslaRent_Server.styles.css" rel="stylesheet" />
@@ -18,6 +18,9 @@
     @*81. CSS ссылки в шаблон*@
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
+    @*260.1 Добавить CSS и JS в файл шаблона _Layout*@
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
@@ -54,5 +57,8 @@
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
     <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
     <script type="text/javascript" src="~/js/mdb.min.js"></script>
+
+    @*260.2 Добавить CSS и JS в файл шаблона _Layout*@
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
