--- a/TeslaRent_Server/_Imports.razor
+++ b/TeslaRent_Server/_Imports.razor
@@ -14,3 +14,6 @@
 
 @*83. Визуальный редактор*@
 @using Blazored.TextEditor
+
+@*259. Добавить глобально (в класс _Imports) @using Radzen.Blazor*@
+@using Radzen.Blazor
