Radzen library installed

--- a/TeslaRent_Server/Pages/Car/CarList.razor
+++ b/TeslaRent_Server/Pages/Car/CarList.razor
@@ -20,7 +20,7 @@
 		<h4 class="card-title text-info">All car's</h4>
 	</div>
 	<div class="col-3 offset-1">
-		<NavLink href="car-list/create" class="btn btn-info form-control"><i class="fa-solid fa-square-plus"></i> New Car</NavLink>
+		<NavLink href="car-list/create" class="btn btn-info btn-block"><i class="fa-solid fa-square-plus"></i> New Car</NavLink>
 	</div>
 </div>
 
